# wheelmap-elstatus

./: .gitignore  Cargo.toml  README.md  build-for-rpizero2w.fish  build.rs  equipment-infos.json  equipments.json  push-image.py  test.json
examples/: display-broken.rs  elstatus.broken.json
gui/: elevator.xcf  lib.slint  main.slint  secondary.slint
src/: display.rs  email.rs  lib.rs  main.rs
src/templates/: errors.txt  status.html  status.txt
