[package]
name = "elstatus"
version = "0.2.0"
edition = "2021"
description="Elevator Status - powered by wheelmap.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Vendored openssl for cross-compiling support
openssl={version="0.10", features=["vendored"]}
reqwest={version="0.11", features=["blocking", "multipart"]}
serde_json="1.0"
futures="0.3"
lettre="0.10.0-rc.6"
tera="1.15"
serde={version= "1", features=["derive"]}
clap = { version = "4", features = ["derive"] }
lazy_static="1"
ngrammatic="0.4"
chrono = "0.4"

slint="1.3"
rgb="*"
image="0.24"

[build-dependencies]
slint-build="1.3"
