[package]
name = "elstatus"
version = "0.2.0"
edition = "2021"
description="Elevator Status - powered by wheelmap.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Vendored openssl for cross-compiling support
openssl={version="0.10", features=["vendored"]}
reqwest={version="0.11", features=["blocking", "multipart"]}
serde_json="1.0"
futures="0.3"
lettre="0.10.0-rc.6"
tera="1.15"
serde={version= "1", features=["derive"]}
clap = { version = "4", features = ["derive"] }
ngrammatic="0.4"
chrono = "0.4"

slint="1.15"
rgb="*"
image="0.24"

[build-dependencies]
slint-build="1.15"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install dependencies, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libfontconfig1-dev:$CROSS_DEB_ARCH"
]

